<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.home.example.notepatt.MainRegistProductActivity"
    tools:showIn="@layout/activity_main_regist_product">


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:layout_gravity="center"
        android:text="@string/action_register_Product" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/texrViewnamene"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_nameProduct"/>
        <EditText
            android:id="@+id/edtNameProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_description"/>

        <EditText
            android:id="@+id/edtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8" />

    </LinearLayout>


    <Button
        android:id="@+id/btnSaveProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_registrar"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
